# Stabilisation

./: .gitignore  README.md
testOutput/: CMakeLists.txt
testOutput/PIDloop/: CMakeLists.txt  PID.c
testOutput/motortest/: CMakeLists.txt  control.c
testOutput/picotest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello_usb.c  stabilisation.c
testOutput/prototype/: CMakeLists.txt  IMU.c  PID.c  main.c  motor.c  serial.c  stepperMotor.c
testOutput/prototype/include/: IMU.h  PID.h  motor.h  serial.h  stepperMotor.h
testOutput/pwmtest/: CMakeLists.txt  pwmcontrol.c
